--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <script src="config.js"></script>
     </head>
     <body class="viewer">
-        <script src="//maps.googleapis.com/maps/api/js?libraries=geometry&language=en&key=GOOGLE_MAPS_API_KEY"></script>
+        <script src="//maps.googleapis.com/maps/api/js?libraries=geometry&language=en&key=AIzaSyC0Mm58DiX-LrjO8cxE2Du60EOOHhHMkbU"></script>
         <script src="assets/js/core.js" ></script>
         <script src="assets/themes/theasys/info.js" ></script>
         <script src="assets/themes/theasys/assets/js/script.js" ></script>
